--- a/views/pages/recipes.ejs
+++ b/views/pages/recipes.ejs
@@ -52,11 +52,13 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
+                        <a class="page-scroll" href="#about"><%= recipe_type%> Recipes</a>
                     </li>
+                    <!--
                     <li>
                         <a class="page-scroll" href="#services">Services</a>
                     </li>
+                    -->
                     <li>
                         <a class="page-scroll" href="#portfolio">Recipe Images</a>
                     </li>
@@ -78,7 +80,7 @@
                     
                     <h1 id="homeHeading">Recipe Recommending Application</h1>
                     <hr>
-                    <a href="#about" class="btn btn-primary btn-xl page-scroll">See More</a>
+                    <a href="#about" class="btn btn-primary btn-xl page-scroll">See <%= recipe_type%> Recipes</a>
                 </div>
             </div>
         </div>
@@ -96,18 +98,19 @@
                         <ul>
                             <% if (recipeTitles.length > 0) { %>
                                 <%    for (i=0; i< recipeTitles.length; i++){ %>
-                                        <a href="#" class="list-group-item"><%= recipeTitles[i] %></a>
+                                        <a href= <%=recipeTitles[i]%> class="list-group-item"><%= recipeTitles[i].replace(/\s/g,"-") %></a>
                                 <%    } %>
                             <%    } %>
                         </ul>
                     </div>
                     </p>
-                    <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Get Started!</a>
+                    <a href="#portfolio" class="page-scroll btn btn-default btn-xl sr-button">See Top 6 recipes images!</a>
                 </div>
             </div>
         </div>
     </section>
 
+     <!-- 
     <section id="services">
         <div class="container">
             <div class="row">
@@ -150,7 +153,7 @@
             </div>
         </div>
     </section>
-
+    -->
     <section class="no-padding" id="portfolio">
         <div class="container-fluid">
             <div class="row no-gutter popup-gallery">
@@ -163,7 +166,7 @@
                                     Category
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    <%=recipeTitles[0]%>
                                 </div>
                             </div>
                         </div>
@@ -178,7 +181,7 @@
                                     Category
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    <%=recipeTitles[1]%>
                                 </div>
                             </div>
                         </div>
@@ -193,52 +196,52 @@
                                     Category
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    <%=recipeTitles[2]%>
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/4.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/4.jpg" class="img-responsive" alt="">
+                    <a href="<%=recipeImages[3]%>" class="portfolio-box">
+                        <img src="<%=recipeImages[3]%>" class="img-fluid" alt="Responsive image" height="228.03">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
                                     Category
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    <%=recipeTitles[3]%>
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/5.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/5.jpg" class="img-responsive" alt="">
+                    <a href="<%=recipeImages[4]%>" class="portfolio-box">
+                        <img src="<%=recipeImages[4]%>" class="img-fluid" alt="Responsive image" height="228.03">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
                                     Category
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    <%=recipeTitles[4]%>
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/6.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/6.jpg" class="img-responsive" alt="">
+                    <a href="<%=recipeImages[5]%>" class="portfolio-box">
+                        <img src="<%=recipeImages[5]%>" class="img-fluid" alt="Responsive image" height="228.03">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
                                     Category
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    <%=recipeTitles[5]%>
                                 </div>
                             </div>
                         </div>
@@ -248,6 +251,7 @@
         </div>
     </section>
 
+    <!-- 
     <aside class="bg-dark">
         <div class="container text-center">
             <div class="call-to-action">
@@ -256,22 +260,24 @@
             </div>
         </div>
     </aside>
-
+    -->
     <section id="contact">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Let's Get In Touch!</h2>
+                    <h2 class="section-heading">Get in Contact!</h2>
                     <hr class="primary">
-                    <p>Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
+                    <p>This application was created by Engineering students for the module COMP41670 - Software Engineering</p>
                 </div>
+                <!-- 
                 <div class="col-lg-4 col-lg-offset-2 text-center">
                     <i class="fa fa-phone fa-3x sr-contact"></i>
                     <p>123-456-6789</p>
                 </div>
-                <div class="col-lg-4 text-center">
+                -->
+                <div class="col-lg-4 col-lg-offset-4 text-center">
                     <i class="fa fa-envelope-o fa-3x sr-contact"></i>
-                    <p><a href="mailto:your-email@your-domain.com">feedback@startbootstrap.com</a></p>
+                    <p><a href="mailto:your-email@your-domain.com">caroline.mc-mahon@ucdconnect.ie</a><a href="mailto:your-email@your-domain.com"> philip.corr@ucdconnect.ie</a><a href="mailto:your-email@your-domain.com"> gavin.heaney@ucdconnect.ie</a></p>
                 </div>
             </div>
         </div>
