--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -70,12 +70,13 @@
 
     <header>
         <div class="header-content">
-            <div class="header-content-inner">
-                <h1 id="homeHeading">Your Favorite Source of Free Bootstrap Themes</h1>
-                <hr>
-                <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
-                <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
-            </div>
+            <div class="panel panel-default">
+              <div class="panel-body text-primary"></div>
+                <div class="header-content-inner text-primary">
+                    <h1 id="homeHeading">Recipe Recommending Application</h1>
+                    <hr>
+                    <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
+                </div>
         </div>
     </header>
 
@@ -218,6 +219,8 @@
             </div>
         </div>
     </section>
+
+
 
     <section id="contact">
         <div class="container">
