--- a/views/pages/recipes.ejs
+++ b/views/pages/recipes.ejs
@@ -98,7 +98,7 @@
                         <ul>
                             <% if (recipeTitles.length > 0) { %>
                                 <%    for (i=0; i< recipeTitles.length; i++){ %>
-                                        <a href= <%=recipeTitles[i]%> class="list-group-item"><%= recipeTitles[i].replace(/\s/g,"-") %></a>
+                                        <a href= <%=recipeTitles[i].replace(/\s/g,"-")%> class="list-group-item"><%= recipeTitles[i]%></a>
                                 <%    } %>
                             <%    } %>
                         </ul>
