--- a/views/pages/homepage.ejs
+++ b/views/pages/homepage.ejs
@@ -102,7 +102,16 @@
                   </select>
                 </div>
                 <div class="form-group">
-                  <label for="sel1">Dietary Needs:</label>
+                  <label for="sel1">Dietary Needs (hold ctrl or shift (or drag with the mouse) to select more than one):</label>
+                 <select multiple class="form-control" id="sel2">
+                    <option>Vegetarian</option>
+                    <option>Vegan</option>
+                    <option>Coeliac</option>
+                    <option>Lactose Intolerant</option>
+                  </select>
+                </div>
+                <div class="form-group">
+                  <label for="sel1">Ingredients:</label>
                  <select multiple class="form-control" id="sel2">
                     <option>Vegetarian</option>
                     <option>Vegan</option>
@@ -131,92 +140,92 @@
 
     <section class="no-padding" id="portfolio">
         <div class="container-fluid">
-            <div class="row no-gutter popup-gallery">
+            <div class="row no-gutter ">
                 <div class="col-lg-4 col-sm-6 center-block">
-                    <a href="img/portfolio/fullsize/1.jpg" class="portfolio-box">
-                        <img src="img/portfolio/fullsize/1.jpg" class="img-fluid" alt="Responsive image" height="228.03">
+                    <a href="/italian" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/italian.jpg" class="img-fluid" alt="Responsive image" height="228.03">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Italian
                                 </div>
                                 <div class="project-name">
-                                    <%=recipeTitles[0]%>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6 center-block">
-                    <a href="img/portfolio/fullsize/2.jpg" class="portfolio-box">
-                        <img src="img/portfolio/fullsize/2.jpg" class="img-fluid" alt="Responsive image" height="228.03">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
-                                </div>
-                                <div class="project-name">
-                                    <%=recipeTitles[1]%>
+                                    Click here to view Italian Recipes
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6 center-block">
-                    <a href="img/portfolio/fullsize/3.jpg" class="portfolio-box">
-                        <img src="img/portfolio/fullsize/3.jpg" class="img-fluid" alt="Responsive image" height="228.03">
+                    <a href="/american" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/american.jpg" class="img-fluid" alt="Responsive image" height="228.03">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    American
                                 </div>
                                 <div class="project-name">
-                                    <%=recipeTitles[2]%>
+                                    Click here to view American Recipes
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6 center-block">
+                    <a href="/chinese" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/chinese.jpg" class="img-fluid" alt="Responsive image" height="228.03">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Chinese
+                                </div>
+                                <div class="project-name">
+                                    Click here to view Chinese Recipes
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/4.jpg" class="portfolio-box">
-                        <img src="img/portfolio/fullsize/4.jpg" class="img-fluid" alt="Responsive image" height="228.03">
+                    <a href="/indian" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/indian.jpg" class="img-fluid" alt="Responsive image" height="228.03">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Indian
                                 </div>
                                 <div class="project-name">
-                                    <%=recipeTitles[3]%>
+                                    Click here to view Indian Recipes
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/5.jpg" class="portfolio-box">
-                        <img src="img/portfolio/fullsize/5.jpg" class="img-fluid" alt="Responsive image" height="228.03">
+                    <a href="/irish" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/Irish.jpg" class="img-fluid" alt="Responsive image" height="228.03">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Irish
                                 </div>
                                 <div class="project-name">
-                                    <%=recipeTitles[4]%>
+                                   Click here to view Irish Recipes
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/6.jpg" class="portfolio-box">
-                        <img src="img/portfolio/fullsize/6.jpg" class="img-fluid" alt="Responsive image" height="228.03">
+                    <a href="/mexican" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/mexican.jpg" class="img-fluid" alt="Responsive image" height="228.03">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Mexican
                                 </div>
                                 <div class="project-name">
-                                    <%=recipeTitles[5]%>
+                                    Click here to view Mexican Recipes
                                 </div>
                             </div>
                         </div>
