--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -149,7 +149,7 @@
                                 <div class="project-name">
                                     American
                                 </div>
-								<div class="project-category text-faded">
+								<div class="project-category text-faded" href="/american">
                                     Click here to view American Recipes
                                 </div>
                             </div>
@@ -161,7 +161,7 @@
                         <img src="img/portfolio/thumbnails/chinese.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
-                                <div class="project-name">
+                                <div class="project-name" href="/chinese">
                                     Chinese
                                 </div>
 								<div class="project-category text-faded">
