--- a/views/pages/recipes.ejs
+++ b/views/pages/recipes.ejs
@@ -87,6 +87,7 @@
     </header>
 
     <section class="bg-primary" id="about">
+
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
@@ -97,10 +98,16 @@
                     <div class="list-group">
                         <ul>
                             <% if (recipeTitles.length > 0) { %>
-                                <%    for (i=0; i< recipeTitles.length; i++){ %>
-                                        <a href= <%=recipeTitles[i].replace(/\s/g,"-").replace(/,/g,"")%> class="list-group-item"><%= recipeTitles[i]%></a>
-                                <%    } %>
-                            <%    } %>
+                                <% for (i=0; i< recipeTitles.length; i++){ %>
+                                    <button type="button" class="list-group-item" data-toggle="modal" data-target="#myModal<%=i%>" ><%= recipeTitles[i]%>
+                                        <span class="pull-right">
+                                            <a type="button" class="btn btn-xs btn-default" href= <%=recipeTitles[i].replace(/\s/g,"-").replace(/,/g,"")%>>
+                                                <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
+                                            </a>
+                                        </span>
+                                    </button>
+                                <%}%>
+                            <%}%>
                         </ul>
                     </div>
                     </p>
@@ -109,6 +116,35 @@
             </div>
         </div>
     </section>
+
+    <!-- Modal -->
+    <% if (recipeTitles.length > 0) { %>
+        <% for (i=0; i< recipeTitles.length; i++){ %>
+            <body>
+                <div class="modal fade" id="myModal<%=i%>" role="dialog">
+                    <div class="modal-dialog">
+                        <!-- Modal content-->
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                <h4 class="modal-title"><%=recipeTitles[i]%></h4>
+                            </div>
+                            <div class="modal-body">
+                                <p>Some basic infor about recipe here.</p>
+                                <p>Calories: <%=recipeCalories[i]%> </p>
+                                <p>Fat: <%=recipeFat[i]%> </p>
+                                <p>Protein: <%=recipeProtein[i]%> </p>
+                                <p>Carbs: <%=recipeCarbs[i]%> </p>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                            </div>
+                        </div>             
+                    </div>
+                </div>
+            </body>
+        <%}%>
+    <%}%>
 
     <section class="no-padding" id="portfolio">
         <div class="container-fluid">
