--- a/views/pages/recipes.ejs
+++ b/views/pages/recipes.ejs
@@ -130,7 +130,7 @@
                                 <h4 class="modal-title"><%=recipeTitles[i]%></h4>
                             </div>
                             <div class="modal-body">
-                                <p>Some basic infor about recipe here.</p>
+                                <p>Some basic info about recipe here:</p>
                                 <p>Calories: <%=recipeCalories[i]%> </p>
                                 <p>Fat: <%=recipeFat[i]%> </p>
                                 <p>Protein: <%=recipeProtein[i]%> </p>
