--- a/views/pages/index.html
+++ b/views/pages/index.html
@@ -97,6 +97,125 @@
     <div ng-view>
     </div>
 
+    <section class="no-padding" id="portfolio">
+        <div class="container-fluid">
+            <div class="row no-gutter ">
+                <div class="col-lg-4 col-sm-6 center-block">
+                    <a href="/italian" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/italian.jpg" class="img-fluid" alt="Responsive image" height="228.03">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Italian
+                                </div>
+                                <div class="project-name">
+                                    Click here to view Italian Recipes
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6 center-block">
+                    <a href="/american" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/american.jpg" class="img-fluid" alt="Responsive image" height="228.03">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    American
+                                </div>
+                                <div class="project-name">
+                                    Click here to view American Recipes
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6 center-block">
+                    <a href="/chinese" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/chinese.jpg" class="img-fluid" alt="Responsive image" height="228.03">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Chinese
+                                </div>
+                                <div class="project-name">
+                                    Click here to view Chinese Recipes
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a href="/indian" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/indian.jpg" class="img-fluid" alt="Responsive image" height="228.03">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Indian
+                                </div>
+                                <div class="project-name">
+                                    Click here to view Indian Recipes
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a href="/irish" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/Irish.jpg" class="img-fluid" alt="Responsive image" height="228.03">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Irish
+                                </div>
+                                <div class="project-name">
+                                   Click here to view Irish Recipes
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a href="/mexican" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/mexican.jpg" class="img-fluid" alt="Responsive image" height="228.03">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Mexican
+                                </div>
+                                <div class="project-name">
+                                    Click here to view Mexican Recipes
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="contact">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <h2 class="section-heading">Get in Contact!</h2>
+                    <hr class="primary">
+                    <p>This application was created by Engineering students for the module COMP41670 - Software Engineering</p>
+                </div>
+                <!-- 
+                <div class="col-lg-4 col-lg-offset-2 text-center">
+                    <i class="fa fa-phone fa-3x sr-contact"></i>
+                    <p>123-456-6789</p>
+                </div>
+                -->
+                <div class="col-lg-4 col-lg-offset-4 text-center">
+                    <i class="fa fa-envelope-o fa-3x sr-contact"></i>
+                    <p><a href="mailto:caroline.mc-mahon@ucdconnect.ie">caroline.mc-mahon@ucdconnect.ie</a><a href="mailto:philip.corr@ucdconnect.ie"> philip.corr@ucdconnect.ie</a><a href="mailto:gavin.heaney@ucdconnect.ie"> gavin.heaney@ucdconnect.ie</a></p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- jQuery -->
     <script src="vendor/jquery/jquery.min.js"></script>
 
