Initial angular routes now working

--- a/public/partial/indexPartial.html
+++ b/public/partial/indexPartial.html
@@ -4,8 +4,9 @@
                 <div class="form-group">
                   <label for="sel1">Food Type:</label>
                   <ul>
-                    <li><a ng-href="#/home">Italian</a></li>
-                    <li><a ng-href="#/american">American</a></li>
+                    <li><a href="/index">Home</a></li>
+                    <li><a href="/index/american">American</a></li>
+                    <!-- <li><a href="/index/italian">Italian</a></li> -->
                   </ul>
                 </div>
                 <ul ng-repeat="recipe in recipes">
