--- a/views/pages/index.html
+++ b/views/pages/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-
+    <base href="/">
     <title>Recipe application Test</title>
 
     <!-- Bootstrap Core CSS -->
@@ -31,7 +31,10 @@
     <script src="js/angular-route.js"></script>
     <script src="js/angular-animate.js"></script>
     <script src="js/recipe-app.js"></script>
-    <script src="js/controllers/indexController.js"></script>
+    <script src="js/controllers.js"></script>
+    <!-- <script src="js/controllers/indexController.js"></script>  -->
+    <!-- <script src="js/controllers/americanController.js"></script>  -->
+
     <script src="js/services/indexService.js"></script>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
