added controllers for each cuisine implemented up to now and refactored

--- a/public/partial/indexPartial.html
+++ b/public/partial/indexPartial.html
@@ -6,7 +6,11 @@
                   <ul>
                     <li><a href="/index">Home</a></li>
                     <li><a href="/index/american">American</a></li>
-                    <!-- <li><a href="/index/italian">Italian</a></li> -->
+                    <li><a href="/index/italian">Italian</a></li>
+                    <li><a href="/index/indian">Indian</a></li>
+                    <li><a href="/index/irish">Irish</a></li>
+                    <li><a href="/index/chinese">Chinese</a></li>
+                    <li><a href="/index/mexican">Mexican</a></li>
                   </ul>
                 </div>
                 <ul ng-repeat="recipe in recipes">
