--- a/views/pages/index.html
+++ b/views/pages/index.html
@@ -48,44 +48,11 @@
 
 <body id="page-top">
 
-    <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
-        <div class="container-fluid">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
-                </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Return to Top of Page</a>
-            </div>
+    <div ng-include="'/partial/navbar.html'"></div>
 
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a class="page-scroll" href="#about">Apply Filters</a>
-                    </li>
-                    <!--
-                    <li>
-                        <a class="page-scroll" href="#services">Services</a>
-                    </li>
-                    
-                    <li>
-                        <a class="page-scroll" href="#portfolio">Recipe Images</a>
-                    </li> 
-                    -->
-                    <li>
-
-                        <a class="page-scroll" href="#contact">Contact</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container-fluid -->
-    </nav>
-    <header>
-        <div class="header-content">
-            <div class="panel panel-default">
+    <header ng-style="headerImage">
+        <div class="header-content">          
+            <div class="panel panel-default panel-text-color">
               <div class="panel-body text-primary"></div>
                 <div class="header-content-inner text-primary">
                     <h1 id="homeHeading">Recipe Recommending Application</h1>
@@ -95,129 +62,11 @@
                 </div>
             </div>
         </div>
-    </header>
+</header>
 
-    <div ng-view>
-    </div>
+    <div ng-view></div>
 
-    <section class="no-padding" id="portfolio">
-        <div class="container-fluid">
-            <div class="row no-gutter ">
-                <div class="col-lg-4 col-sm-6 center-block">
-                    <a href="/italian" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/italian.jpg" class="img-fluid" alt="Responsive image" height="228.03">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Italian
-                                </div>
-                                <div class="project-name">
-                                    Click here to view Italian Recipes
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6 center-block">
-                    <a href="/american" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/american.jpg" class="img-fluid" alt="Responsive image" height="228.03">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    American
-                                </div>
-                                <div class="project-name">
-                                    Click here to view American Recipes
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6 center-block">
-                    <a href="/chinese" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/chinese.jpg" class="img-fluid" alt="Responsive image" height="228.03">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Chinese
-                                </div>
-                                <div class="project-name">
-                                    Click here to view Chinese Recipes
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="/indian" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/indian.jpg" class="img-fluid" alt="Responsive image" height="228.03">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Indian
-                                </div>
-                                <div class="project-name">
-                                    Click here to view Indian Recipes
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="/irish" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/Irish.jpg" class="img-fluid" alt="Responsive image" height="228.03">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Irish
-                                </div>
-                                <div class="project-name">
-                                   Click here to view Irish Recipes
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="/mexican" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/mexican.jpg" class="img-fluid" alt="Responsive image" height="228.03">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Mexican
-                                </div>
-                                <div class="project-name">
-                                    Click here to view Mexican Recipes
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="contact">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Get in Contact!</h2>
-                    <hr class="primary">
-                    <p>This application was created by Engineering students for the module COMP41670 - Software Engineering</p>
-                </div>
-                <!-- 
-                <div class="col-lg-4 col-lg-offset-2 text-center">
-                    <i class="fa fa-phone fa-3x sr-contact"></i>
-                    <p>123-456-6789</p>
-                </div>
-                -->
-                <div class="col-lg-4 col-lg-offset-4 text-center">
-                    <i class="fa fa-envelope-o fa-3x sr-contact"></i>
-                    <p><a href="mailto:caroline.mc-mahon@ucdconnect.ie">caroline.mc-mahon@ucdconnect.ie</a><a href="mailto:philip.corr@ucdconnect.ie"> philip.corr@ucdconnect.ie</a><a href="mailto:gavin.heaney@ucdconnect.ie"> gavin.heaney@ucdconnect.ie</a></p>
-                </div>
-            </div>
-        </div>
-    </section>
+    <div ng-include="'/partial/contact.html'"></div>
 
     <!-- jQuery -->
     <script src="vendor/jquery/jquery.min.js"></script>
