removed deprecated code

--- a/public/partial/indexPartial.html
+++ b/public/partial/indexPartial.html
@@ -2,15 +2,15 @@
         <div class="container">
             <div class="row">
                 <div >
-                    <!-- <a href="/index" class="btn btn-success">>Home</a> -->
                     <div class="center-block centre-create">
-                    <a ng-click="cuisine='american'" class="btn btn-cuisine">American</a>
+
+<!--                ng-click updates the scope variables which are available to the controller
+ -->                <a ng-click="cuisine='american'" class="btn btn-cuisine">American</a>
                     <a ng-click="cuisine='italian'" class="btn btn-cuisine">Italian</a>
                     <a ng-click="cuisine='indian'" class="btn btn-cuisine">Indian</a>
                     <a ng-click="cuisine='irish'" class="btn btn-cuisine">Irish</a>
                     <a ng-click="cuisine='chinese'" class="btn btn-cuisine">Chinese</a>
                     <a ng-click="cuisine='mexican'" class="btn btn-cuisine">Mexican</a>
-                    {{cuisine}}
 
 
                     <!-- <a href="/index/american" class="btn btn-cuisine">American</a>
@@ -25,17 +25,20 @@
                 <div >
                     <div class="center-block centre-create">
                     <a ng-click="diet='vegetarian'" class="btn btn-cuisine">Vegetarian</a>
-                    {{diet}}
-<!--                     <a ng-click="diet='vegan'"      class="btn btn-cuisine">Vegan</a>
+                    <a ng-click="diet='vegan'"      class="btn btn-cuisine">Vegan</a>
                     <a ng-click="diet='pescetarian'" class="btn btn-cuisine">Pescetarian</a>
                     <a ng-click="diet='paleo'" class="btn btn-cuisine">Paleo</a>
                     <a ng-click="diet='primal'" class="btn btn-cuisine">Primal</a>
                     <a ng-click="diet='ovo vegetarian'" class="btn btn-cuisine">Ovo vegetarian,</a>
-                    <a ng-click="diet='lacto vegetarian'" class="btn btn-cuisine">Lacto vegetarian,</a> -->
-
+                    <a ng-click="diet='lacto vegetarian'" class="btn btn-cuisine">Lacto vegetarian,</a>
                     </div>
                 </div>
 
+                <div>
+<!--                 double curly braces are used to display the value of the scope variables
+ -->                    <p>diet: {{diet}} cuisine: {{cuisine}}</p>
+                    <a ng-click="getData()" class="btn btn-cuisine">Make Get Request</a>
+                </div>
                 <!-- <div class="form-group">
                   <label for="sel1">Dietary Needs (hold ctrl or shift (or drag with the mouse) to select more than one):</label>
                  <select multiple class="form-control" id="sel2">
@@ -48,7 +51,6 @@
                 </div> -->
 
                 <div class="form-group">
-                <a ng-click="getData()" class="btn btn-cuisine">Vegetarian</a>
                   <label for="sel1">Ingredients:</label>
                  <select multiple class="form-control" id="sel2">
                     <option>Chicken</option>
@@ -84,7 +86,12 @@
 <section class="no-padding" id="portfolio">
         <div class="container-fluid">
             <div class="row no-gutter ">
-
+           <!--  ng-repeat will create as many copies as it needs to of the div that it is defined in.
+            It creates one copy for every recipe in recipes.
+            It also copies thee children tags 
+            Note the double curly braces accessing the scope object that is available to the view.
+            It is getting the titles and the images.
+            ng-src is used to reference the images-->
                 <div class="col-lg-4 col-sm-6 center-block" ng-repeat="recipe in recipes">
                     <a href="/italian" class="portfolio-box">
                         <img ng-src="{{recipe.image}}" class="img-fluid" alt="Responsive image" height="228.03">
