--- a/public/partial/navbar.html
+++ b/public/partial/navbar.html
@@ -12,9 +12,8 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="page-scroll" href="#about">Apply Filters</a>
+                        <a class="page-scroll" href="#about">Dietary needs  </a>
                     </li>
-                    <!--
                     <li>
                         <a class="page-scroll" href="#services">Services</a>
                     </li>
@@ -22,9 +21,7 @@
                     <li>
                         <a class="page-scroll" href="#portfolio">Recipe Images</a>
                     </li> 
-                    -->
                     <li>
-
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
                 </ul>
